[package]
name = "funds-program"
version = "0.0.1"
description = "Quartz funds program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "funds_program"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
solana-program = "*"
drift = { path = "../../deps/drift", features = ["cpi"] }
